codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.6.7)                                      │
│                                                                │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的       │
│ 速率限制与额度信息                                             │
│                                                                │
│  模型:          gpt-5.1-codex (推理 none, 摘要 auto)           │
│  目录:          /workspace/tests                               │
│  审批:          on-request                                     │
│  沙箱:          read-only                                      │
│  Agents.md:     无                                             │
│                                                                │
│  Token 使用:    1.05K 总计 （700 输入 + 350 输出）             │
│  上下文窗口:    剩余 100%（1.45K 已用 / 272K）                 │
│  5h 限额:       [████████░░░░░░░░░░░░] 剩余 40% （11:32 重置） │
│  Weekly 限额:   [█████████████░░░░░░░] 剩余 65% （11:52 重置） │
│  警告:          限额数据可能已过期，请开始新的对话刷新。       │
╰────────────────────────────────────────────────────────────────╯
