codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.6.2)                                               │
│                                                                         │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的                │
│ 速率限制与额度信息                                                      │
│                                                                         │
│  模型:           gpt-5.1-codex-max (推理 none, 摘要 auto)               │
│  目录:           /workspace/tests                                       │
│  审批:           on-request                                             │
│  沙箱:           read-only                                              │
│  Agents.md:      无                                                     │
│                                                                         │
│  Token 使用:     1.2K 总计 （800 输入 + 400 输出）                      │
│  上下文窗口:     已用 0%（1.2K 已用 / 272K）                            │
│  Monthly 限额:   [██████████████████░░] 剩余 88% （07:08 · 7 May 重置） │
╰─────────────────────────────────────────────────────────────────────────╯
