codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                │
│                                                          │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的 │
│ 速率限制与额度信息                                       │
│                                                          │
│  模型:         gpt-5-codex (推理 none, 摘要 auto)        │
│  目录:         /workspace/tests                          │
│  审批:         on-request                                │
│  沙箱:         read-only                                 │
│  Agents.md:    无                                        │
│                                                          │
│  Token 使用:   750 总计 （500 输入 + 250 输出）          │
│  上下文窗口:   剩余 100%（750 已用 / 272K）              │
│  限制:         暂无数据                                  │
╰──────────────────────────────────────────────────────────╯
